infra/kubernetes/app-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: app
    spec:
      containers:
      - env:
        - name: MIX_ENV
          value: prod
        - name: INFLUXDB_HOST
          value: influxdb
        - name: PG_HOST
          value: postgres
        - name: PG_USERNAME
          value: postgres
        - name: MQTT_HOST
          value: mqtt
        image: eu.gcr.io/sense-219918/sense_app:$TAG
        name: app
        ports:
          - containerPort: 4000
        resources:
          requests:
            cpu: "10m"
      restartPolicy: Always
      volumes:
        - name: app-claim0
          persistentVolumeClaim:
            claimName: app-claim0
status: {}
