infra/kubernetes/influxdb-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    service: influxdb
  name: influxdb
  namespace: senseapp
spec:
  replicas: 1
  template:
    metadata:
      labels:
        service: influxdb
    spec:
      containers:
      - image: influxdb:1.7
        name: influxdb
        ports:
        - containerPort: 8086
        - containerPort: 8083
        resources:
          requests:
            cpu: "10m"
      volumes:
        - name: influxdb-persistent-storage
          persistentVolumeClaim:
            claimName: influxdb-pv-claim
      restartPolicy: Always
status: {}
