infra/kubernetes/mqtt-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: ""
  creationTimestamp: null
  labels:
    io.kompose.service: mqtt
  name: mqtt
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: mqtt
    spec:
      containers:
      - env:
        - name: MOSQUITTOCONF_auth_opt_backends
          value: http
        - name: MOSQUITTOCONF_auth_opt_http_aclcheck_uri
          value: /mqtt/acl
        - name: MOSQUITTOCONF_auth_opt_http_getuser_uri
          value: /mqtt/user
        - name: MOSQUITTOCONF_auth_opt_http_hostname
          value: app
        - name: MOSQUITTOCONF_auth_opt_http_port
          value: "4000"
        - name: MOSQUITTOCONF_auth_opt_http_superuser_uri
          value: /mqtt/superuser
        - name: MOSQUITTOCONF_auth_opt_superusers
          value: admin
        image: eu.gcr.io/sense-219918/sense_mqtt:$TAG
        name: mqtt
        ports:
        - containerPort: 1883
        - containerPort: 9883
        resources:
          requests:
            cpu: "10m"
      restartPolicy: Always
status: {}
