infra/kubernetes/web-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: web
    spec:
      containers:
      - env:
        - name: INFLUXDB_HOST
          value: influxdb
        - name: PG_HOST
          value: postgres
        - name: PG_USERNAME
          value: postgres
        image: eu.gcr.io/sense-219918/sense_web:$TAG
        name: app
        ports:
          - containerPort: 4200
        resources:
          requests:
            cpu: "10m"
      restartPolicy: Always
      volumes:
        - name: web-claim0
          persistentVolumeClaim:
            claimName: web-claim0
status: {}
