infra/kubernetes/app-internal-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: app
  name: app
  namespace: default
spec:
  ports:
  - port: 4000
    protocol: TCP
    targetPort: 4000
  selector:
    io.kompose.service: app
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
