infra/kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: api
  name: api
  namespace: senseapp
spec:
  ports:
  - port: 4000
    protocol: TCP
    targetPort: 4000
  selector:
    service: api
  type: ClusterIP
