infra/kubernetes/influxdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: influxdb
  name: influxdb
  namespace: senseapp
spec:
  ports:
  - name: "8086"
    port: 8086
    targetPort: 8086
  - name: "8083"
    port: 8083
    targetPort: 8083
  selector:
    service: influxdb
