infra/kubernetes/mqtt-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: mqtt
  name: mqtt
  namespace: senseapp
spec:
  ports:
  - name: "mqtt"
    port: 1883
    targetPort: 1883
    protocol: TCP
    nodePort: 30000
  - name: "ws"
    port: 8083
    targetPort: 8083
    protocol: TCP
    nodePort: 30001
  - name: "wss"
    port: 8084
    targetPort: 8084
    nodePort: 30002
    protocol: TCP
  type: NodePort
  selector:
    service: mqtt
