infra/kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: postgres
  name: postgres
  namespace: senseapp
spec:
  ports:
  - name: "5432"
    port: 5432
    targetPort: 5432
  selector:
    service: postgres
