infra/kubernetes/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: web
  name: web
  namespace: senseapp
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    service: webapp
  type: ClusterIP
