infra/kubernetes/web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web
  namespace: senseapp
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: "false"
spec:
  rules:
  - host: senseapp.space
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 8080
  tls:
  - hosts:
      - senseapp.space
    secretName: letsencrypt-web-prod
